

***** ChangeLog for 4.0 compared to 3.9.* *****
For users:

For developers:


WARNING: 

Dolibarr 4.0 should be compatible with PHP 7 but more feedbacks are still expected to confirm that.

Following changes may create regression for some external modules, but were necessary to make
Dolibarr better:
- Method select_type_comptes_financiers() has been renamed into selectTypeOfBankAccount() 



***** ChangeLog for 3.9.0 compared to 3.8.* *****
For users:
NEW: A new and more modern look for "eldy" theme.
NEW: Introduce a new theme called "Material Design". 
NEW: #3767 Allow changing multiple prices of a product at once
NEW: Add a button to purge criteria in user list
NEW: Add a filter field to restrict list of member when doing a LDAP list request. Use also this filter into ldap command line script making sync from ldap to dolibarr.
NEW: Add all assigned users and all extrafields data in new event when we createFromClone
NEW: Add hidden option to use standard position address in crabe model For electronic sending solutions
NEW: Add a refresh button on page list of direct print jobs.
NEW: Add a tab "document" in donation card
NEW: Add cancel button on thirdparty create page
NEW: Add chart of product statistics
NEW: Add color on categories
NEW: Add date value filter on account records list
NEW: Add __PROJECT_NAME__ tag for customer invoice emails
NEW: Add option PDF_ALLOW_HTML_FOR_FREE_TEXT to be able to enter pdf footer text with wysiwyg editor.
NEW: Add fields into llx_cronjobs to be able to use job table to queue one shot jobs.
NEW: Add filter on status on invoice list
NEW: Add filter on status on shipments
NEW: Add gender property managed on user card FIX: Better error messages when uploading photo of user when permission to write are not granted
NEW: Add help tooltips on fields of dictionary edit pages.
NEW: Add hidden option MAIN_MAILFORM_DISABLE_ENTERKEY to disable the key enter into the form to send email.