@@ -25,7 +25,7 @@ LoanCalc=Bank Loans Calculator
 PurchaseFinanceInfo=Purchase & Financing Information
 SalePriceOfAsset=Sale Price of Asset
 PercentageDown=Percentage Down
-LengthOfMortgage=Length of Mortgage
+LengthOfMortgage=Duration of loan
 AnnualInterestRate=Annual Interest Rate
 ExplainCalculations=Explain Calculations
 ShowMeCalculationsAndAmortization=Show me the calculations and amortization
@@ -42,10 +42,10 @@ AmountFinanced=Amount Financed
 AmortizationMonthlyPaymentOverYears=Amortization For Monthly Payment: <b>%s</b> over %s years
 Totalsforyear=Totals for year
 MonthlyPayment=Monthly Payment
-LoanCalcDesc=This <b>mortgage calculator</b> can be used to figure out monthly payments of a home mortgage loan, based on the home's sale price, the term of the loan desired, buyer's down payment percentage, and the loan's interest rate.<br> This calculator factors in PMI (Private Mortgage Insurance) for loans where less than 20% is put as a down payment. Also taken into consideration are the town property taxes, and their effect on the total monthly mortgage payment.<br>
+LoanCalcDesc=This <b>mortgage calculator</b> can be used to figure out monthly payments of a loaning, based on the amount borrowed, the term of the loan desired and the interest rate.<br> This calculator includes also PMI (Private Mortgage Insurance) for loans where less than 20%% is put as a down payment. Also taken into consideration are the town property taxes, and their effect on the total monthly mortgage payment.<br>
 GoToInterest=%s will go towards INTEREST
 GoToPrincipal=%s will go towards PRINCIPAL
-YouWillSpend=You will spend %s on your house in year %s
+YouWillSpend=You will spend %s in year %s
 # Admin
 ConfigLoan=Configuration of the module loan
 LOAN_ACCOUNTING_ACCOUNT_CAPITAL=Accountancy code capital by default
