@@ -25,6 +25,10 @@ Dolibarr 4.0 should be compatible with PHP 7 but more feedbacks are still expect
 Following changes may create regression for some external modules, but were necessary to make
 Dolibarr better:
 - Method select_type_comptes_financiers() has been renamed into selectTypeOfBankAccount() 
+- File '/core/tpl/document_actions_pre_headers.tpl.php' were renamed into '/core/actions_linkedfiles.inc.php'.
+So if you included it into your module, change your code like this to be compatible with all version:
+  $res=@include_once DOL_DOCUMENT_ROOT . '/core/actions_linkedfiles.inc.php';
+  if (! $res) include_once DOL_DOCUMENT_ROOT . '/core/tpl/document_actions_pre_headers.tpl.php';
 
 
 
